baudrate, responsive design for webcam view

--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -9,11 +9,10 @@
   </div>
   <div class="panel-body">
 <div class="row">
-                                        <div id="vision" style="margin: 0 auto; width: {{ camHeight }}px; height: {{ camHeight }}px; position: relative">
+                                        <div id="vision" style="margin: 0 auto; width: 95%; position: relative">
                                                 <canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: 100%"></canvas>
                                         </div>
 </div>
-<br clear="all" />
   </div>
 </div>
 
