--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -7,10 +7,10 @@
   <div class="panel-heading">
     <h3 class="panel-title">Arena</h3>
   </div>
-  <div class="panel-body">
+  <div class="panel-body webcam-panel-body">
 <div class="row">
-                                        <div id="vision" style="margin: 0 auto; width: 95%; position: relative">
-                                                <canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: 100%"></canvas>
+                                        <div id="vision" style="margin: 0 auto">
+                                                <canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="position: relative; width: 100%"></canvas>
                                         </div>
 </div>
   </div>
