no messages, cam view

--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -9,9 +9,10 @@
   </div>
   <div class="panel-body webcam-panel-body">
 <div class="row">
-					<div id="vision" style="margin: 0 auto; position: relative">
+					<div id="vision" style="margin: 0 auto; min-height: 800px; position: relative">
                                                 <canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: 100%"></canvas>
                                         </div>
+<br clear="all" />
 </div>
   </div>
 </div>
