--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -1,6 +1,6 @@
                 <div id="tcamera" class="tab-pane fade">
                         <div class="row">
-                                <div class="col-md-9">
+                                <div class="col-md-7">
 
 
 <div class="panel panel-default">
@@ -9,7 +9,7 @@
   </div>
   <div class="panel-body webcam-panel-body">
 <div class="row">
-					<div id="vision" style="margin: 0 auto; min-height: 800px; position: relative">
+					<div id="vision" style="margin: 0 auto; width: 600px; height: 600px; position: relative">
                                                 <canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: 100%"></canvas>
                                         </div>
 <br clear="all" />
@@ -19,7 +19,7 @@
 
 
                                 </div>
-<div class="col-md-3">
+<div class="col-md-5">
 
 
 <div class="panel panel-default">
@@ -77,4 +77,5 @@
 </div>
                         </div>
                 </div>
+</div>
 </div>
