--- a/views/index.html
+++ b/views/index.html
@@ -8,10 +8,10 @@
 
 <div class="container">
 	<div class="tab-content">
-		{{> tabLogic }}
-		{{> tabCamera }}
-		{{> tabAnalyze }}
-		{{> tabSettings }}
+		{{> TabLogic }}
+		{{> TabCamera }}
+		{{> TabAnalyze }}
+		{{> TabSettings }}
 	</div>
 </div>
 
