session, ie - fixed size webcam canvas

--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -8,7 +8,7 @@
 				<div class="panel-body webcam-panel-body">
 					<div class="row">
 						<div id="vision" style="margin: 0 auto; width: 600px; height: 600px; position: relative">
-							<canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: 100%"></canvas>
+							<canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: {{ camHeight }}px; height: {{camHeight}}px"></canvas>
 						</div>
 						<br clear="all" />
 					</div>
