tab settings deleted, collapsible panels in camera tab

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,17 +54,17 @@ html, body {
 }
 
 .slider {
-    width: 100% !important;
-    height: 20px !important;
-}
-.slider-track {
-    height: 20px !important;
+    width: 100% !important; 
 }
 
 .slider-selection {
-    background: blue !important;
+    background: #149bdf !important;
 }
 
 .webcam-panel-body {
 padding: 0 15px !important;
+}
+
+a { 
+cursor: pointer; cursor: hand;
 }
