--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -20,9 +20,9 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 
-					<h3 class="panel-title"><a data-toggle="collapse" data-parent="#panels" href="#panel_zones">Zones</a></h3>
+					<h3 class="panel-title"><a data-toggle="collapse" data-target="#panel_zones">Zones</a></h3>
 				</div>
-<div id="pane_zones" class="panel-collapse collapse in">
+<div id="panel_zones" class="panel-collapse collapse in">
 				<div class="panel-body">
 
 					<div class="table-responsive">
@@ -41,9 +41,9 @@
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title">Frames</h3>
+					<h3 class="panel-title"><a data-toggle="collapse" data-target="#panel_frames">Frames</a></h3>
 				</div>
-<div class="panel-collapse collapse in">
+<div id="panel_frames" class="panel-collapse collapse in">
 				<div class="panel-body">
 
 					<div class="table-responsive">
@@ -59,9 +59,9 @@
 			</div>
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title">Custom variables</h3>
+					<h3 class="panel-title"><a data-toggle="collapse" data-target="#panel_variables">Custom variables</a></h3>
 				</div>
-<div class="panel-collapse collapse in">
+			<div id="panel_variables" class="panel-collapse collapse in">
 				<div class="panel-body">
 
 					<div class="table-responsive">
@@ -73,8 +73,64 @@
 						</table>
 					</div>
 				</div>
-</div>
 			</div>
+			</div>
+
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title"><a data-toggle="collapse" data-target="#panel_settings">Settings</a></h3>
+				</div>
+			<div id="panel_settings" class="panel-collapse collapse in">
+				<div class="panel-body">
+
+                        <form class="form-horizontal" role="form">
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Brightness</label>
+                                        <div class="col-sm-9">
+                                                <input id="brightness" data-webcam="Brightness" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Exposure</label>
+                                        <div class="col-sm-9">
+                                                <input id="exposure" data-webcam="Exposure (Absolute)" class="webcam-control form-control" type="text" data-slider-min="3" data-slider-max="2047" data-slider-step="1" data-slider-value="1" />
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Gain</label>
+                                        <div class="col-sm-9">
+                                                <input id="gain" data-webcam="Gain" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Contrast</label>
+                                        <div class="col-sm-9">
+                                                <input id="contrast" data-webcam="Contrast" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Focus</label>
+                                        <div class="col-sm-9">
+                                                <input id="focus" data-webcam="Focus (absolute)" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="250" data-slider-step="5" data-slider-value="1" />
+                                        </div>
+                                </div>
+
+
+
+                                <div class="form-group">
+                                        <div class="col-sm-offset-3 col-sm-9">
+                                                <button type="submit" class="btn btn-default">Save</button>
+                                        </div>
+                                </div>
+                        </form>
+
+
+				</div>
+			</div>
+			</div>
+
+
 		</div>
 	</div>
 </div>
