--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -88,31 +88,31 @@
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Brightness</label>
                                         <div class="col-sm-9">
-                                                <input id="brightness" data-webcam="Brightness" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                                <input id="brightness" data-slider-handle="triangle" data-webcam="brightness" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
                                         </div>
                                 </div>
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Exposure</label>
                                         <div class="col-sm-9">
-                                                <input id="exposure" data-webcam="Exposure (Absolute)" class="webcam-control form-control" type="text" data-slider-min="3" data-slider-max="2047" data-slider-step="1" data-slider-value="1" />
+                                                <input id="exposure_absolute" data-slider-handle="triangle" data-webcam="exposure_absolute" class="webcam-control form-control" type="text" data-slider-min="3" data-slider-max="2047" data-slider-step="1" data-slider-value="1" />
                                         </div>
                                 </div>
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Gain</label>
                                         <div class="col-sm-9">
-                                                <input id="gain" data-webcam="Gain" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                                <input id="gain" data-slider-handle="triangle" data-webcam="gain" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
                                         </div>
                                 </div>
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Contrast</label>
                                         <div class="col-sm-9">
-                                                <input id="contrast" data-webcam="Contrast" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                                <input id="contrast" data-slider-handle="triangle" data-webcam="contrast" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
                                         </div>
                                 </div>
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Focus</label>
                                         <div class="col-sm-9">
-                                                <input id="focus" data-webcam="Focus (absolute)" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="250" data-slider-step="5" data-slider-value="1" />
+                                                <input id="focus_absolute" data-slider-handle="triangle" data-webcam="focus_absolute" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="250" data-slider-step="5" data-slider-value="1" />
                                         </div>
                                 </div>
 
