--- a/views/index.html
+++ b/views/index.html
@@ -23,10 +23,13 @@
 		var brightnessoldValue;
 
 		$.get('/settings', function(data) {
-		    data = data.status.split("\n").filter(function(n){ return !!n }).map(function (n) { return n.split(':'); });
-		    data.forEach(function (val) {
+		    data.status.split("\n").filter(function(n){ return !!n }).map(function (n) { return n.split(':'); })
+		      .forEach(function (val) {
 			$('#' + val[0]).slider('setValue', +val[1]);
-                    });
+                      });
+		    for (var key in data.settings) {
+			$('#settings_' + key).slider('setValue', [+data.settings[key].split(',')[0],+data.settings[key].split(',')[1]]);
+		    }
 		});
 
 
