--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -88,35 +88,68 @@
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Brightness</label>
                                         <div class="col-sm-9">
-                                                <input id="brightness" data-slider-handle="triangle" data-webcam="brightness" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                                <input id="brightness" data-webcam="brightness" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
                                         </div>
                                 </div>
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Exposure</label>
                                         <div class="col-sm-9">
-                                                <input id="exposure_absolute" data-slider-handle="triangle" data-webcam="exposure_absolute" class="webcam-control form-control" type="text" data-slider-min="3" data-slider-max="2047" data-slider-step="1" data-slider-value="1" />
+                                                <input id="exposure_absolute" data-webcam="exposure_absolute" class="webcam-control form-control" type="text" data-slider-min="3" data-slider-max="2047" data-slider-step="1" data-slider-value="1" />
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Saturation</label>
+                                        <div class="col-sm-9">
+                                                <input id="saturation" data-webcam="saturation" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Sharpness</label>
+                                        <div class="col-sm-9">
+                                                <input id="sharpness" data-webcam="sharpness" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
                                         </div>
                                 </div>
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Gain</label>
                                         <div class="col-sm-9">
-                                                <input id="gain" data-slider-handle="triangle" data-webcam="gain" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                                <input id="gain" data-webcam="gain" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
                                         </div>
                                 </div>
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Contrast</label>
                                         <div class="col-sm-9">
-                                                <input id="contrast" data-slider-handle="triangle" data-webcam="contrast" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
+                                                <input id="contrast" data-webcam="contrast" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="1" />
                                         </div>
                                 </div>
                                 <div class="form-group">
                                         <label for="height" class="col-sm-3 control-label">Focus</label>
                                         <div class="col-sm-9">
-                                                <input id="focus_absolute" data-slider-handle="triangle" data-webcam="focus_absolute" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="250" data-slider-step="5" data-slider-value="1" />
+                                                <input id="focus_absolute" data-webcam="focus_absolute" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="250" data-slider-step="5" data-slider-value="1" />
+                                        </div>
+                                </div>
+
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Threshold</label>
+                                        <div class="col-sm-9">
+                                                <input id="settings_threshold" data-webcam="settings_threshold" class="webcam-control form-control" type="text" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="[200, 250]" />
                                         </div>
                                 </div>
 
 
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Subject blob area</label>
+                                        <div class="col-sm-9">
+                                                <input id="settings_subject_area" data-webcam="settings_subject_area" class="webcam-control form-control" type="text" data-slider-min="10" data-slider-max="50000" data-slider-step="1" data-slider-value="[1000, 1500]" />
+                                        </div>
+                                </div>
+
+
+                                <div class="form-group">
+                                        <label for="height" class="col-sm-3 control-label">Robot blob area</label>
+                                        <div class="col-sm-9">
+                                                <input id="settings_robot_area" data-webcam="settings_robot_area" class="webcam-control form-control" type="text" data-slider-min="10" data-slider-max="50000" data-slider-step="1" data-slider-value="[1000, 1500]" />
+                                        </div>
+                                </div>
 
                                 <div class="form-group">
                                         <div class="col-sm-offset-3 col-sm-9">
