name check, turntable exchange direction

--- a/views/menu.html
+++ b/views/menu.html
@@ -13,17 +13,11 @@
 			<ul class="nav navbar-nav nav-tabs">
 
 				<li class="dropdown">
-					<a href="#" data-toggle="dropdown" class="dropdown-toggle">Session<b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a id="sessions" href="/sessions" data-toggle="modal" data-target="#modal"><i class="fa fa-cloud-download"></i> Export</a></li>
-					</ul>
-				</li>
-
-				<li class="dropdown">
 					<a href="#" data-toggle="dropdown" class="dropdown-toggle">Experiment<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a id="codeLoad" href="/experiments" data-toggle="modal" data-target="#modal"><i class="fa fa-cloud-download"></i> Load</a></li>
-						<li><a href="#save" id="codeSave"><i class="fa fa-save"></i> Save</a></li>
+						<li><a id="sessions" href="/sessions" data-toggle="modal" data-target="#modal"><i class="fa fa-cloud-download"></i> Export session</a></li>
+						<li><a id="codeLoad" href="/experiments" data-toggle="modal" data-target="#modal"><i class="fa fa-download"></i> Load experiment</a></li>
+						<li><a href="#save" id="codeSave"><i class="fa fa-save"></i> Save experiment</a></li>
 					</ul>
 				</li>
 
