optimalized canvas use & clearing icons

--- a/views/blockly.html
+++ b/views/blockly.html
@@ -42,27 +42,25 @@
 	</category>
 	<category name="Experiment">
 		<block type="experiment"></block>
+		<block type="out"></block>
+		<block type="time"></block>
 	</category>
 	<category name="Arena">
+		<block type="rotatezone"></block>
 		<block type="subject"></block>
 		<block type="robot"></block>
 		<block type="center"></block>
 		<block type="distance"></block>
-		<block type="rotatezone"></block>
 		<block type="zone"></block>
-	</category>
-	<category name="Input">
-		<block type="motor_position"></block>
 		<block type="position"></block>
-		<block type="time"></block>
 	</category>
-	<category name="Output">
+	<category name="Input / Output">
 		<block type="light"></block>
 		<block type="shock"></block>
 		<block type="turntable"></block>
 		<block type="feeder"></block>
 		<block type="sound"></block>
-		<block type="out"></block>
+		<block type="motor_position"></block>
 	</category>
 	<category name="Logic">
 		<block type="logic_compare"></block>
