--- a/views/menu.html
+++ b/views/menu.html
@@ -24,7 +24,7 @@
 
 				<li class="active"><a id="blogic" data-toggle="tab" href="#tlogic">Logic</a></li>
 				<li><a data-toggle="tab" href="#tcamera">Camera</a></li>
-				<li><a data-toggle="tab" href="#tanalyze">Analyze</a></li>
+<!--				<li><a data-toggle="tab" href="#tanalyze">Analyze</a></li> -->
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
