--- a/views/blockly.html
+++ b/views/blockly.html
@@ -40,7 +40,7 @@
 			<block type="controls_flow_statements"></block>
 		</category>
 	</category>
-	<category name="Experiment">
+	<category name="Session">
 		<block type="experiment"></block>
 		<block type="out"></block>
 		<block type="time"></block>
