assets - blockly blocks

--- a/views/assets.html
+++ b/views/assets.html
@@ -14,10 +14,24 @@
 
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
-<script type="text/javascript" src="/js/blocks/input.js"></script>
-<script type="text/javascript" src="/js/blocks/output.js"></script>
+<script type="text/javascript" src="/js/blocks/center.js"></script>
+<script type="text/javascript" src="/js/blocks/distance.js"></script>
 <script type="text/javascript" src="/js/blocks/experiment.js"></script>
-<script type="text/javascript" src="/js/blocks/javascript.js"></script>
+<script type="text/javascript" src="/js/blocks/feeder.js"></script>
+<script type="text/javascript" src="/js/blocks/light.js"></script>
+<script type="text/javascript" src="/js/blocks/message.js"></script>
+<script type="text/javascript" src="/js/blocks/motor_position.js"></script>
+<script type="text/javascript" src="/js/blocks/out.js"></script>
+<script type="text/javascript" src="/js/blocks/position.js"></script>
+<script type="text/javascript" src="/js/blocks/projector.js"></script>
+<script type="text/javascript" src="/js/blocks/robot.js"></script>
+<script type="text/javascript" src="/js/blocks/rotatezone.js"></script>
+<script type="text/javascript" src="/js/blocks/shock.js"></script>
+<script type="text/javascript" src="/js/blocks/sound.js"></script>
+<script type="text/javascript" src="/js/blocks/subject.js"></script>
+<script type="text/javascript" src="/js/blocks/time.js"></script>
+<script type="text/javascript" src="/js/blocks/turntable.js"></script>
+<script type="text/javascript" src="/js/blocks/zone.js"></script>
 
 <script type="text/javascript" src="/js/lib/BlobBuilder.min.js"></script>
 <script type="text/javascript" src="/js/lib/FileSaver.min.js"></script>
