--- a/views/blockly.html
+++ b/views/blockly.html
@@ -53,6 +53,7 @@
 		<block type="distance"></block>
 		<block type="zone"></block>
 		<block type="position"></block>
+		<block type="calibrate"></block>
 	</category>
 	<category name="Input / Output">
 		<block type="light"></block>
