--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -50,6 +50,7 @@
 						<table class="table table-striped table-hover table-condensed">
 							<tr><th>frames:</th><td align=right> <span id="cam_counter">0</span></td></tr>
 							<tr><th>recognized:</th><td align=right> <span id="cv_counter">0</span></td></tr>
+							<tr><th>success rate:</th><td align=right> <span id="success_rate">0%</span></td></tr>
 							<tr><th>fps:</th><td align=right> <span id="fps">0</span></td></tr>
 						</table>
 					</div>
