repeat block, statistics fixed: sound

--- a/views/assets.html
+++ b/views/assets.html
@@ -33,6 +33,7 @@
 <script type="text/javascript" src="/js/blocks/turntable.js"></script>
 <script type="text/javascript" src="/js/blocks/zone.js"></script>
 <script type="text/javascript" src="/js/blocks/calibrate.js"></script>
+<script type="text/javascript" src="/js/blocks/repeat.js"></script>
 
 <script type="text/javascript" src="/js/lib/BlobBuilder.min.js"></script>
 <script type="text/javascript" src="/js/lib/FileSaver.min.js"></script>
