--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -13,6 +13,11 @@
 						</div>
 						<br clear="all" />
 					</div>
+					<div class="row">
+						<div class="col-sm-12">
+						    <ul><li>add point - left click</li><li>del point - right click</li><li>drag to move point</li><li>shift-drag to move zone</li></ul>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -60,7 +65,7 @@
 			</div>
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title"><a data-toggle="collapse" data-target="#panel_variables">Custom variables</a></h3>
+					<h3 class="panel-title"><a data-toggle="collapse" data-target="#panel_variables">Output</a></h3>
 				</div>
 			<div id="panel_variables" class="panel-collapse collapse in">
 				<div class="panel-body">
