--- a/views/blockly.html
+++ b/views/blockly.html
@@ -33,35 +33,8 @@
 				<mutation elseif="1" else="1"></mutation>
 			</block>
 		</category>
-		<category name="Loops">
-			<block type="controls_repeat_ext">
-				<value name="TIMES">
-					<block type="math_number">
-						<title name="NUM">10</title>
-					</block>
-				</value>
-			</block>
-			<block type="controls_whileUntil"></block>
-			<block type="controls_for">
-				<title name="VAR">i</title>
-				<value name="FROM">
-					<block type="math_number">
-						<title name="NUM">1</title>
-					</block>
-				</value>
-				<value name="TO">
-					<block type="math_number">
-						<title name="NUM">10</title>
-					</block>
-				</value>
-				<value name="BY">
-					<block type="math_number">
-						<title name="NUM">1</title>
-					</block>
-				</value>
-			</block>
-			<block type="controls_forEach"></block>
-			<block type="controls_flow_statements"></block>
+		<category name="Time">
+			<block type="repeat"></block>
 		</category>
 	</category>
 	<category name="Logic">
