arena angle, shock counting

--- a/views/menu.html
+++ b/views/menu.html
@@ -34,9 +34,9 @@
             <ul class="nav navbar-nav">
 				<li class="active"><a href="#"  id="isWebcam"><i class="fa fa-video-camera fa-lg"></i></a></li>
 				<li class="active"><a href="#"  id="isArduino"><i class="fa fa-code-fork fa-lg"></i></a></li>
-				<li class="active"><a href="#"  id="isShocking"><i class="fa fa-bolt fa-lg"></i><span>0.0mA</span></a></li>
+				<li class="active"><a href="#"  id="isShocking"><i class="fa fa-bolt fa-lg"></i></a></li>
 <li class="active" style="width: 100px;">
-<a><input data-slider-id="RC" data-webcam="settings_shock" id="shock-control" class="webcam-control form-control" type="text" data-slider-min="2" data-slider-max="7" data-slider-step="1" data-slider-value="1" /></a>
+<a><input data-slider-id="RC" data-webcam="settings_shock" id="settings_shock" class="webcam-control form-control" type="text" data-slider-min="2" data-slider-max="7" data-slider-step="1" data-slider-value="1" /></a>
 </li>
 				<li class="active"><a href="#"  id="shock_val">0.2mA</a></li>
 				<li class="active"><a href="#" class="codeStop" id="elapsedTime">0s</a></li>
