--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,8 +22,8 @@ html, body {
 
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-	background: white !important;
-	color: black !important;
+	background: #f8f8f8;
+	color: black;
 }
 
 #zones {
