--- a/views/menu.html
+++ b/views/menu.html
@@ -1,3 +1,26 @@
+<!-- Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">x</button>
+            <h4>Login to ArénOmat</h4>
+          </div>
+          <div class="modal-body">
+            <form method="post" action='/login' name="login_form">
+              <p><input type="text" class="span3" name="eid" id="email" placeholder="Email"></p>
+              <p><input type="password" class="span3" name="passwd" placeholder="Password"></p>
+              <p><button type="submit" class="btn btn-primary">Sign in</button>
+              </p>
+            </form>
+          </div>
+          <div class="modal-footer">
+		If you forgot your credentials contact the administrator.
+          </div>
+        </div> <!-- /.modal-content -->
+    </div> <!-- /.modal-dialog -->
+</div> <!-- /.modal -->
+
 <nav class="navbar navbar-default" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
@@ -27,20 +50,34 @@
 <!--				<li><a data-toggle="tab" href="#tanalyze">Analyze</a></li> -->
 			</ul>
 
-			<ul class="nav navbar-nav navbar-right">
-				<li class="active"><div style="padding: 8px"><a class="codeStart btn btn-success" title="Start the experiment" href="#"><i class="fa fa-play fa-lg"></i></a></div></li>
-				<li class="active"><div style="padding: 8px"><a class="codeStop btn btn-danger" title="Stop the experiment" href="#"><i class="fa fa-stop fa-lg"></i></a></div></li>
-			</ul>
             <ul class="nav navbar-nav">
 				<li class="active"><a href="#"  id="isWebcam"><i class="fa fa-video-camera fa-lg"></i></a></li>
 				<li class="active"><a href="#"  id="isArduino"><i class="fa fa-code-fork fa-lg"></i></a></li>
-				<li class="active"><a href="#"  id="isShocking"><i class="fa fa-bolt fa-lg"></i></a></li>
+	    </ul>
+            <ul class="nav navbar-nav">
+			<li><a></a></li>
+	    </ul>	    
+            <ul id="shock_panel" class="nav navbar-nav">
+				<li class="active" id="isShocking"><a href="#"><i class="fa fa-bolt fa-lg"></i></a></li>
 <li class="active" style="width: 100px;">
 <a><input data-slider-id="RC" data-webcam="settings_shock" id="settings_shock" class="webcam-control form-control" type="text" data-slider-min="2" data-slider-max="7" data-slider-step="1" data-slider-value="1" /></a>
 </li>
-				<li class="active"><a href="#"  id="shock_val">0.2mA</a></li>
-				<li class="active"><a href="#" class="codeStop" id="elapsedTime">0s</a></li>
+				<li class="active"><a href="#"  style="padding-left: 0px" id="shock_val">0.2mA</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+			<li><a></a></li>
+	    </ul>	    
+            <ul id="shock_panel" class="nav navbar-nav">
+				<li class="active"><a data-toggle="modal" href="#loginModal" href="#"><i class="fa fa-user fa-lg"></i> login</a></li>
+	    </ul>
+
+
+			<ul class="nav navbar-nav navbar-right">
+				<li class="active"><a href="#" class="codeStop" id="elapsedTime">0s</a></li>
+				<li class="active"><div style="padding: 8px"><a class="codeStart btn btn-success" title="Start the experiment" href="#"><i class="fa fa-play fa-lg"></i></a></div></li>
+				<li class="active"><div style="padding: 8px"><a class="codeStop btn btn-danger" title="Stop the experiment" href="#"><i class="fa fa-stop fa-lg"></i></a></div></li>
+			</ul>
+
 
 		</div>
 	</div>
