--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -13,6 +13,14 @@
 						</div>
 						<br clear="all" />
 					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Legend</h3>
+				</div>
+				<div class="panel-body">
 					<div class="row">
 						<div class="col-sm-12">
 						    <ul><li>add point - left click</li><li>del point - right click</li><li>drag to move point</li><li>shift-drag to move zone</li></ul>
