--- a/views/assets.html
+++ b/views/assets.html
@@ -27,7 +27,10 @@
 <script type="text/javascript" src="/js/blocks/robot.js"></script>
 <script type="text/javascript" src="/js/blocks/rotatezone.js"></script>
 <script type="text/javascript" src="/js/blocks/shock.js"></script>
+<script type="text/javascript" src="/js/blocks/mp3.js"></script>
 <script type="text/javascript" src="/js/blocks/sound.js"></script>
+<script type="text/javascript" src="/js/blocks/sound_whitenoise.js"></script>
+<script type="text/javascript" src="/js/blocks/sound_sinewave.js"></script>
 <script type="text/javascript" src="/js/blocks/subject.js"></script>
 <script type="text/javascript" src="/js/blocks/time.js"></script>
 <script type="text/javascript" src="/js/blocks/turntable.js"></script>
