--- a/views/blockly.html
+++ b/views/blockly.html
@@ -6,21 +6,25 @@
 	</category>
 	<category name="Arena">
 		<block type="rotatezone"></block>
+		<block type="motor_position"></block>
 		<block type="subject"></block>
 		<block type="robot"></block>
 		<block type="center"></block>
 		<block type="distance"></block>
 		<block type="zone"></block>
 		<block type="position"></block>
-		<block type="calibrate"></block>
 	</category>
 	<category name="Input / Output">
 		<block type="light"></block>
 		<block type="shock"></block>
 		<block type="turntable"></block>
 		<block type="feeder"></block>
+	</category>
+	<category name="Sounds">
+		<block type="mp3"></block>
 		<block type="sound"></block>
-		<block type="motor_position"></block>
+		<block type="whitenoise"></block>
+		<block type="sinewave"></block>
 	</category>
 
 	<category name="Control">
