experiment delete sound generator

--- a/views/assets.html
+++ b/views/assets.html
@@ -30,6 +30,8 @@
 <script type="text/javascript" src="/js/blocks/mp3.js"></script>
 <script type="text/javascript" src="/js/blocks/sound.js"></script>
 <script type="text/javascript" src="/js/blocks/sound_whitenoise.js"></script>
+<script type="text/javascript" src="/js/blocks/sound_pinknoise.js"></script>
+<script type="text/javascript" src="/js/blocks/sound_brownnoise.js"></script>
 <script type="text/javascript" src="/js/blocks/sound_sinewave.js"></script>
 <script type="text/javascript" src="/js/blocks/subject.js"></script>
 <script type="text/javascript" src="/js/blocks/time.js"></script>
