--- a/views/blockly.html
+++ b/views/blockly.html
@@ -24,6 +24,8 @@
 		<block type="mp3"></block>
 		<block type="sound"></block>
 		<block type="whitenoise"></block>
+		<block type="pinknoise"></block>
+		<block type="brownnoise"></block>
 		<block type="sinewave"></block>
 	</category>
 
@@ -42,10 +44,10 @@
 		</category>
 	</category>
 	<category name="Logic">
+		<block type="logic_boolean"></block>
 		<block type="logic_compare"></block>
 		<block type="logic_operation"></block>
 		<block type="logic_negate"></block>
-		<block type="logic_boolean"></block>
 		<block type="logic_null"></block>
 		<block type="logic_ternary"></block>
 	</category>
