--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,16 +76,23 @@ cursor: pointer; cursor: hand;
 
 
 
-
 .tree {
     min-height:20px;
     padding:19px;
     margin-bottom:20px;
+    background-color:#fbfbfb;
+    border:1px solid #999;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
 }
 .tree li {
     list-style-type:none;
     margin:0;
-    padding:2px 5px 0 5px;
+    padding:10px 5px 0 5px;
     position:relative
 }
 .tree li::before, .tree li::after {
@@ -103,13 +110,22 @@ cursor: pointer; cursor: hand;
 }
 .tree li::after {
     border-top:1px solid #999;
-    height:5px;
-    top:15px;
+    height:20px;
+    top:25px;
     width:25px
 }
 .tree li span {
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border:1px solid #999;
+    border-radius:5px;
     display:inline-block;
-    text-decoration:none;
+    padding:3px 8px;
+    text-decoration:none
+}
+.tree .parent_li li {
+    display: none;
+}
 }
 .tree li.parent_li>span {
     cursor:pointer
@@ -118,15 +134,13 @@ cursor: pointer; cursor: hand;
     border:0
 }
 .tree li:last-child::before {
-    height:15px
+    height:30px
 }
 .tree li.parent_li>span:hover, .tree li.parent_li>span:hover+ul li span {
-    background: #eee; 
+    background:#eee;
     border:1px solid #94a0b4;
     color:#000
 }
-
-
 
 
 .badge {
