--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,7 +92,7 @@ cursor: pointer; cursor: hand;
 .tree li {
     list-style-type:none;
     margin:0;
-    padding:10px 5px 0 5px;
+//    padding:10px 5px 0 5px;
     position:relative
 }
 .tree li::before, .tree li::after {
@@ -102,23 +102,19 @@ cursor: pointer; cursor: hand;
     right:auto
 }
 .tree li::before {
-    border-left:1px solid #999;
+//    border-left:1px solid #999;
     bottom:50px;
     height:100%;
     top:0;
     width:1px
 }
 .tree li::after {
-    border-top:1px solid #999;
+//    border-top:1px solid #999;
     height:20px;
     top:25px;
     width:25px
 }
 .tree li span {
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
-    border:1px solid #999;
-    border-radius:5px;
     display:inline-block;
     padding:3px 8px;
     text-decoration:none
