--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,14 +80,9 @@ cursor: pointer; cursor: hand;
     min-height:20px;
     padding:19px;
     margin-bottom:20px;
-    background-color:#fbfbfb;
-    border:1px solid #999;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    border-radius:4px;
-    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
+}
+.tree ul {
+    padding-left: 0px;
 }
 .tree li {
     list-style-type:none;
@@ -116,7 +111,7 @@ cursor: pointer; cursor: hand;
 }
 .tree li span {
     display:inline-block;
-    padding:3px 8px;
+//    padding:3px 8px;
     text-decoration:none
 }
 .tree .parent_li li {
@@ -191,4 +186,13 @@ cursor: pointer; cursor: hand;
 }
 #RC .slider-handle {
     background: red;
+}
+
+
+.table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
+padding: 2px !important;
+}
+
+.tree ul ul {
+padding-left: 20px;
 }
