--- a/views/experiments/index.html
+++ b/views/experiments/index.html
@@ -5,7 +5,7 @@
 </div>  
 <div class="modal-body">  
 	<div class="table-responsive">
-		<table class="table table-striped table-hover">
+		<table class="table table-striped table-hover table-condensed">
 			<tr>
 				<th>name</th>
 				<th colspan="2">action</th>
@@ -13,8 +13,8 @@
 			{{#experiments}}
 			<tr>
 				<td align=top>{{name}}</td>
-				<td><a href="#del" class="del" data-experiment="{{name}}">del</a></td>
-				<td><a href="#load" class="load" data-experiment="{{name}}">load</a></td>
+				<td><a class="btn btn-danger btn-xs del" href="#del" data-experiment-name="{{name}}" data-experiment-id="{{id}}"><i class="fa fa-trash-o"></i> del</a></td>
+				<td><a href="#load" class="load btn btn-success btn-xs" data-experiment-name="{{name}}" data-experiment-id="{{id}}"><i class="fa fa-download"></i> load</a></td>
 			</tr>
 			{{/experiments}}
 		</table>
@@ -27,20 +27,24 @@
 	$(document).ready(function() {
 
 		$(".load").click(function(e) {
-			$.get('/experiments/' + $(this).data('experiment'), function(data) {
+			$.get('/experiments/' + $(this).data('experiment-id'), function(data) {
 				Blockly.mainWorkspace.clear();
 				var xml = Blockly.Xml.textToDom(data.xml);
 				Blockly.Xml.domToWorkspace(Blockly.mainWorkspace, xml);
+console.log(data);
+				$('#vision').arena('setZones', data.zones);
+
 				$('#modal').modal('hide')
 			});
 			e.preventDefault();
 		});
 
 		$(".del").click(function(e) {
-			var name = $(this).data('experiment');
+			var name = $(this).data('experiment-name');
+			var id = $(this).data('experiment-id');
 			bootbox.confirm("Do you really want to delete: " + name + "?", function(result) {
 				if (result) {
-					$.ajax({url: "/experiments/" + name, type: "DELETE"}).done(function (data) {
+					$.ajax({url: "/experiments/" + id, type: "DELETE"}).done(function (data) {
 					    location.reload();
 					    console.log(data);
 					});
