--- a/views/layout.html
+++ b/views/layout.html
@@ -11,7 +11,7 @@
 	<body>
 <script>
  if (!(typeof window.chrome === "object")) {
-    alert('This software has been made for Chrome, looks like you're using another browser. Feel free to continue, but keep in mind that there is pretty good chance that something won't work');
+    alert("This software has been made for Chrome, looks like you're using another browser. Feel free to continue, but keep in mind that there is pretty good chance that something won\'t work");
 }
 </script>
 		{{> menu}}
