--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -4,23 +4,30 @@
 		<div class="col-md-7">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title">Arena</h3>
+<div class="pull-right">
+  <a role="button" id="rotate" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Rotate left"><i class="fa fa-rotate-left"></i></a>
+  <a role="button" id="flip" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Flip"><i class="fa fa-exchange"></i></a>
+  <a role="button" id="slice" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Generate a slice"><i class="fa fa-circle-o-notch"></i></a>
+  <a role="button" id="rectangle" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Generate a rectangle"><i class="fa fa-edit"></i></a>
+</div>
+					<h3 style="line-height: 30px" class="panel-title"><a data-toggle="collapse" data-target="#panel_webcam">Arena</a></h3>
 				</div>
-				<div class="panel-body webcam-panel-body">
+				<div id="panel_webcam" class="panel-body panel-collapse collapse in webcam-panel-body">
 					<div class="row">
-						<div id="vision" style="margin: 0 auto; width: 600px; height: 600px; position: relative">
+						<div class="col-sm-12">
+						  <div id="vision" style="margin: 0 auto; width: 600px; height: 600px; position: relative">
 							<canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: {{ camHeight }}px; height: {{camHeight}}px"></canvas>
+						  </div>
 						</div>
-						<br clear="all" />
 					</div>
 				</div>
 			</div>
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title">Legend</h3>
+					<h3 class="panel-title"><a data-toggle="collapse" data-target="#panel_legend">Legend</a></h3>
 				</div>
-				<div class="panel-body">
+				<div id="panel_legend" class="panel-body panel-collapse collapse in">
 					<div class="row">
 						<div class="col-sm-12">
 						    <ul><li>add point - left click</li><li>del point - right click</li><li>drag to move point</li><li>shift-drag to move zone</li></ul>
@@ -29,15 +36,14 @@
 				</div>
 			</div>
 		</div>
+</div>
+
 		<div class="col-md-5">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-
 					<h3 class="panel-title"><a data-toggle="collapse" data-target="#panel_zones">Zones</a></h3>
 				</div>
-<div id="panel_zones" class="panel-collapse collapse in">
-				<div class="panel-body">
-
+				<div id="panel_zones" class="panel-body panel-collapse collapse in">
 					<div class="table-responsive">
 						<table id="zonelist" class="table table-striped table-hover table-condensed">
 							<tr>
@@ -49,7 +55,6 @@
 					</div>
 
 				</div>
-</div>
 			</div>
 
 			<div class="panel panel-default">
