--- a/views/menu.html
+++ b/views/menu.html
@@ -8,8 +8,8 @@
           </div>
           <div class="modal-body">
             <form method="post" action='/login' name="login_form">
-              <p><input type="text" class="span3" name="eid" id="email" placeholder="Email"></p>
-              <p><input type="password" class="span3" name="passwd" placeholder="Password"></p>
+              <p><input type="text" class="span3" name="email" id="email" placeholder="Email"></p>
+              <p><input type="password" class="span3" name="password" placeholder="Password"></p>
               <p><button type="submit" class="btn btn-primary">Sign in</button>
               </p>
             </form>
