rotate left icon

--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -9,11 +9,12 @@
  <div class="input-group">
       <input type="text" value="15" id="rotate_angle" class="form-control input-sm">
       <span class="input-group-btn">
-		<a role="button" id="rotate" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Rotate zone by given angle"><i class="fa fa-rotate-left"></i></a>
+		<a role="button" id="rotate" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Rotate zone by given angle"><i class="fa fa-rotate-right"></i></a>
       </span>
     </div><!-- /input-group -->
 </div>
-							<a role="button" id="flip" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Mirror the zone over Y axis"><i class="fa fa-exchange"></i></a>
+&nbsp;
+<a role="button" id="flip" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Mirror the zone over Y axis"><i class="fa fa-exchange"></i></a>
 <div class="pull-left input-group-xs">
  <div class="input-group">
       <input type="text" value="45" id="slice_angle" class="form-control input-sm">
