no rectangles for now

--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -23,7 +23,7 @@
       </span>
     </div><!-- /input-group -->
 </div>
-							<a role="button" id="rectangle" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Generate a rectangle"><i class="fa fa-edit"></i></a>
+					<!--		<a role="button" id="rectangle" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Generate a rectangle"><i class="fa fa-edit"></i></a> -->
 						</div>
 						<h3 style="line-height: 30px" class="panel-title"><a data-toggle="collapse" data-target="#panel_webcam">Arena</a></h3>
 					</div>
