--- a/views/partials/tab_camera.html
+++ b/views/partials/tab_camera.html
@@ -7,17 +7,17 @@
 						<div class="pull-right">
 <div class="pull-left input-group-xs">
  <div class="input-group">
-      <input type="text" value="15" id="rotate_angle" class="form-control input-sm">
+      <input type="text" value="15" id="rotate_angle" class="form-control input-sm" style="width: 50px">
       <span class="input-group-btn">
 		<a role="button" id="rotate" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Rotate zone by given angle"><i class="fa fa-rotate-right"></i></a>
       </span>
     </div><!-- /input-group -->
 </div>
-&nbsp;
+<div class="pull-left">&nbsp;</div>
 <a role="button" id="flip" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Mirror the zone over Y axis"><i class="fa fa-exchange"></i></a>
 <div class="pull-left input-group-xs">
  <div class="input-group">
-      <input type="text" value="45" id="slice_angle" class="form-control input-sm">
+      <input type="text" value="45" id="slice_angle" class="form-control input-sm" style="width: 50px">
       <span class="input-group-btn">
 `		<a role="button" id="slice" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" data-placement="left" title="Generate a slice of given angle"><i class="fa fa-circle-o-notch"></i></a>
       </span>
@@ -172,7 +172,7 @@
 								<div class="form-group">
 									<label for="height" class="col-sm-3 control-label">Subject blob area</label>
 									<div class="col-sm-9">
-										<input id="settings_subject_area" data-webcam="settings_subject_area" class="webcam-control form-control" type="text" data-slider-min="10" data-slider-max="20000" data-slider-step="1" data-slider-value="[1000, 1500]" />
+										<input id="settings_subject_area" data-webcam="settings_subject_area" class="webcam-control form-control" type="text" data-slider-min="10" data-slider-max="20000" data-slider-step="1" data-slider-value="[100, 1500]" />
 									</div>
 								</div>
 
