--- a/views/menu.html
+++ b/views/menu.html
@@ -38,7 +38,7 @@
 				<li class="dropdown">
 					<a href="#" data-toggle="dropdown" class="dropdown-toggle">Experiment<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a id="sessions" href="/sessions" data-toggle="modal" data-target="#modal"><i class="fa fa-cloud-download"></i> Export session</a></li>
+					<!--	<li><a id="sessions" href="/sessions" data-toggle="modal" data-target="#modal"><i class="fa fa-cloud-download"></i> Export session</a></li> -->
 						<li><a id="codeLoad" href="/experiments" data-toggle="modal" data-target="#modal"><i class="fa fa-download"></i> Load experiment</a></li>
 						<li><a href="#save" id="codeSave"><i class="fa fa-save"></i> Save experiment</a></li>
 					</ul>
@@ -47,7 +47,7 @@
 
 				<li class="active"><a id="blogic" data-toggle="tab" href="#tlogic">Logic</a></li>
 				<li><a data-toggle="tab" href="#tcamera">Camera</a></li>
-<!--				<li><a data-toggle="tab" href="#tanalyze">Analyze</a></li> -->
+				<li><a href="/analyze">Analyze</a></li> 
 			</ul>
 
             <ul class="nav navbar-nav">
